system/gatekeeper/templates/constraint-helm2-releases.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: gkhelm2releases
spec:
  crd:
    spec:
      names:
        kind: GkHelm2Releases
      validation:
        openAPIV3Schema:
          properties: {}

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package helm2releases

        violation[{"msg": msg}] {
          input.review.object.kind == "ConfigMap"
          input.review.object.metadata.labels.OWNER == "TILLER"
          msg := "deployed with an old Helm version"
        }
